test/expected/declare_sib.out
declare x as signed bool
        ^
9: error: "signed bool" is illegal for built-in type
